[package]
name = "rusty_jwt"
version = "2.5.1"
authors = ["René Richter <richterrettich@gmail.com>","Alex Maslakov <me@gildedhonour.com>, <gilded.honour@protonmail.com>"]
license = "Apache-2.0"

homepage = "https://github.com/Richterrettich/rusty_jwt"
repository = "https://github.com/Richterrettich/rusty_jwt"
documentation = "https://github.com/Richterrettich/rusty_jwt"

description = "Implementation of JSON JWT"
keywords = ["jwt", "json", "token", "encryption", "auth0-jwt"]
readme = "README.md"

[dependencies]
time = "0.1.37"
openssl = "~0.9.12"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
base64 = "0.6.0"
